[gd_scene load_steps=94 format=3 uid="uid://b8v7vcmu0gnhr"]

[ext_resource type="Texture2D" uid="uid://b1pahea5jvrai" path="res://assets/Images/Player/Player Hurt 48x48.png" id="1_qlg0r"]
[ext_resource type="Script" uid="uid://bkr3668nsdxdb" path="res://scenes/player.gd" id="1_tuyoq"]
[ext_resource type="Texture2D" uid="uid://d0f5pqr0l4jq1" path="res://assets/Images/Player/Player Idle 48x48.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://c32rygnmyhvkm" path="res://assets/Images/Player/player climb-back 48x48.png" id="2_y4r1p"]
[ext_resource type="Texture2D" uid="uid://400xxqphfqm3" path="res://assets/Images/Player/player new jump 48x48.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://cc44lmcbcy5ho" path="res://assets/Images/Player/Player Death 64x64.png" id="3_smehm"]
[ext_resource type="Texture2D" uid="uid://bimnnqxnsh1b2" path="res://assets/Images/Player/player run 48x48.png" id="4_smehm"]
[ext_resource type="Texture2D" uid="uid://dq055125ueq0e" path="res://assets/Images/Player/PlayerWalk 48x48.png" id="5_ur7pv"]
[ext_resource type="Texture2D" uid="uid://d1qcqhrs3bcxa" path="res://assets/Images/Player/player land 48x48.png" id="6_ur7pv"]
[ext_resource type="AudioStream" uid="uid://sm430r11rsgc" path="res://assets/SoundEffects/player/hades-death-sound.mp3" id="8_smehm"]
[ext_resource type="Texture2D" uid="uid://bi73tsps8uf1r" path="res://assets/Images/UI/pixel-art-empty-circle-icon-pixelated-circle-outline-representing-a-blank-or-placeholder-space-isolated-illustration-vector-removebg-preview.png" id="11_d2wvv"]
[ext_resource type="Texture2D" uid="uid://ce5tjgh3c1o5u" path="res://assets/Images/UI/fractions-educationfraction-pie-divided-into-600w-1726436647.webp" id="12_3v2ag"]
[ext_resource type="PackedScene" uid="uid://bs4mtd4a5rhdf" path="res://fadeToBlackAnimation.tscn" id="13_jej6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("2_y4r1p")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("2_y4r1p")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("2_y4r1p")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("2_y4r1p")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_qlg0r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("1_qlg0r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("1_qlg0r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("1_qlg0r")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("3_smehm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("3_smehm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("3_smehm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("3_smehm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("3_smehm")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("3_smehm")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("3_smehm")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("3_smehm")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("3_smehm")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("3_smehm")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_qlg0r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_qlg0r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_qlg0r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_qlg0r")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_tuyoq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_tuyoq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_tuyoq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_tuyoq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_tuyoq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_tuyoq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_tuyoq")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_tuyoq")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_tuyoq")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_tuyoq")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_fjrip")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_fjrip")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("3_fjrip")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_fjrip")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_fjrip")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_fjrip")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("6_ur7pv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("6_ur7pv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("6_ur7pv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("6_ur7pv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("6_ur7pv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("6_ur7pv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("6_ur7pv")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("6_ur7pv")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("6_ur7pv")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("4_smehm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("4_smehm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("4_smehm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("4_smehm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("4_smehm")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("4_smehm")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("4_smehm")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("4_smehm")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("5_ur7pv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("5_ur7pv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("5_ur7pv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("5_ur7pv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("5_ur7pv")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("5_ur7pv")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_holxr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}],
"loop": true,
"name": &"climbing",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}],
"loop": true,
"name": &"damaged",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.01,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}],
"loop": true,
"name": &"landing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4r1p"]
size = Vector2(55, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2wvv"]
size = Vector2(106, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v2ag"]
size = Vector2(105, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jej6c"]
size = Vector2(65, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("11_d2wvv")
region = Rect2(0, 0, 515, 484)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsb7e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("12_3v2ag")
region = Rect2(0, 0, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("12_3v2ag")
region = Rect2(120, 0, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("12_3v2ag")
region = Rect2(240, 0, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("12_3v2ag")
region = Rect2(360, 0, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("12_3v2ag")
region = Rect2(480, 0, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("12_3v2ag")
region = Rect2(120, 240, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("12_3v2ag")
region = Rect2(240, 240, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("12_3v2ag")
region = Rect2(360, 240, 120, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("12_3v2ag")
region = Rect2(480, 240, 120, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_irpag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3st")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1da1t")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_tuyoq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-25, 0)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_holxr")
animation = &"walking"
autoplay = "idle"

[node name="Death_soundeffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_smehm")

[node name="ladder_finder" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
priority = 4

[node name="Ladder?" type="CollisionShape2D" parent="ladder_finder"]
position = Vector2(-24, 4)
shape = SubResource("RectangleShape2D_y4r1p")

[node name="collision 2 d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-27, 3)
shape = SubResource("RectangleShape2D_y4r1p")

[node name="actionable finder" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="actionable finder"]
position = Vector2(-1, 19)
shape = SubResource("RectangleShape2D_d2wvv")

[node name="exit_finder" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit_finder"]
position = Vector2(-0.5, 18)
shape = SubResource("RectangleShape2D_3v2ag")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-23, 5)
shape = SubResource("RectangleShape2D_jej6c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 8.0
offset_bottom = 109.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_right = 4.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/HBoxContainer/TextureRect"]
position = Vector2(56.999996, 50)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"filled"

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/HBoxContainer/TextureRect2"]
position = Vector2(56.999996, 50)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"filled"

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/HBoxContainer/TextureRect3"]
position = Vector2(56.999996, 50)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"filled"

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/HBoxContainer/TextureRect4"]
position = Vector2(56.999996, 50)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"filled"

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/HBoxContainer/TextureRect5"]
position = Vector2(56.999996, 50)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qsb7e")
animation = &"filled"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(65, 671)
sprite_frames = SubResource("SpriteFrames_irpag")
animation = &"6"

[node name="fadeToBlackAnimation" parent="." instance=ExtResource("13_jej6c")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="ladder_finder" to="." method="_on_ladder_finder_body_entered"]
[connection signal="body_exited" from="ladder_finder" to="." method="_on_ladder_finder_body_exited"]
